# bmwlog

./: .dev.env  .dockerignore  .editorconfig  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  README.rst  Vagrantfile  bmwlog.py  deployer.py  deployme.cmd  docker-compose.yml  gunicorn_settings.py  init_db.py  nginx_bmwlog.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  supervisor_bmwlog.conf  tox.ini
.github/: pull_request_template.md
app/: __init__.py  advance_lm.py  bmg.py  config.py  config_local.py  config_template.py  debug_views.py  fields.py  flash.py  forms.py  helpers.py  helput.py  logging_plugin.py  login_manager.py  models.py  post_controller.py  site_managing.py  tests.py  user_controller.py  views.py
bmwlog/: README.md  package-lock.json  package.json
css/: 404.css  funnyText.css  jquery.onoff.css  style.css  tag-basic-style.css  toastr.css
demo/: tuktuk.html
dev/: .env  build_and_push_app_image.sh  build_app_image.sh  common.sh  push_app_image.sh
docs/: docker.md  gcp.md
js/: functions.js  imagebox.js  post.scripts.js
kubernetes/: app-deployment.yml
local/: deployme.cmd  deployme.sh
nbproject/: project.xml
prod/: nginx_bmwlog.conf
py/: config.py  helpers.py  models.py  post_controller.py  user_controller.py
static/: ads.txt
templates/: 404.html  about.html  admin_page.html  administration.html  banners.html  base.html  blueprint.html  categories.html  gallery.html  gallery_add.html  info.html  item_add.html  playground.html  quote_add.html  static_page.html  static_page_admin.html  (+1 more)
(+178 files in other folders)
