[tool.poetry]
name = "bmwlog"
version = "1.0.0"
description = "Storage for some controversial thoughts."
authors = ["Misha Behersky <bmwant@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.7"
bottle = "=0.12.13"
Beaker = "^1.10"
bottle-cork = "^0.12.0"
gunicorn = "^19.9"
Jinja2 = "^2.10"
Markdown = "^3.1"
WTForms = "^2.2"
peewee = "^3.9"
PyMySQL = "=0.9.3"
cryptography = "^2.6"

[tool.poetry.dev-dependencies]
click = "^7.0"
flake8 = "^3.7"
docker = "^4.0"
pytest = "^4.5"
ansible = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
